--- a/b6.html
+++ b/b6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danh Sách Sản Phẩm</title>
-    <link rel="stylesheet" href="./demo.css">
+    <link rel="stylesheet" href="./b6.css">
 </head>
 <body>
     <div class="tong">
